--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
         "tailwindcss": "^1.6.2",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "vue-router": "^3.4.3"
     }
 }
